# OCL3D

./: README.md  run_iusl_hand.sh  run_kitti_pillars_pointnet.sh
PointNet3DBoxStamped/: CMakeLists.txt  package.xml
PointNet3DBoxStamped/msg/: PointNet3DBoxStamped.msg  PointNet3DBoxStampedArray.msg
autoware_tracker/: CMakeLists.txt
autoware_tracker/config/: calib.txt  params.yaml  params_cadcd_0005.yaml  params_cadcd_0011.yaml  params_cadcd_0013.yaml  params_cadcd_0019.yaml  params_cadcd_0037.yaml  params_cadcd_0041.yaml  params_cadcd_0043.yaml  params_cadcd_0051.yaml  params_cadcd_0068.yaml  params_delft.yaml  params_iusl_cb.yaml  params_kitti.yaml  params_kitti_cb.yaml  params_kitti_cb_0000.yaml  params_kitti_cb_0003.yaml  params_kitti_cb_0004.yaml  params_kitti_cb_0005.yaml  params_kitti_cb_0006.yaml  params_kitti_cb_0008.yaml  params_kitti_cb_0009.yaml  params_kitti_cb_0010.yaml  params_kitti_cb_0011.yaml  params_kitti_cb_0012.yaml  params_kitti_cb_0013.yaml  params_kitti_cb_0016.yaml  params_kitti_cb_0017.yaml  params_sensors_bag.yaml  params_tj4d.yaml  params_train_data.yaml  sensor_fusion.txt
autoware_tracker/msg/: DetectedObject.msg  (+1 more)
kitti_camera_ros/: CMakeLists.txt  package.xml
kitti_camera_ros/launch/: kitti_camera_ros.launch
kitti_camera_ros/scripts/: readphoto.py
kitti_camera_ros/src/: kitti_camera_ros.cpp
kitti_velodyne_ros/: CMakeLists.txt
launch/: efficient_online_learning.rviz  efficient_online_learning_iusl.launch  efficient_online_learning_pillars_pointnet.launch
point_cloud_features/: CMakeLists.txt
point_cloud_features/launch/: point_cloud_feature_extractor.launch  pointnet_features.launch
point_cloud_features/scripts/: pointnet_fea_ros.py  pointnet_glb_fea_ros.py
point_cloud_features/src/: point_cloud_feature_extractor.cpp  point_cloud_feature_extractor_global.cpp  point_cloud_feature_extractor_global_pillars.cpp
point_cloud_features/src/point_cloud_features/: point_cloud_features.cpp
pointpillars_ros/: CMakeLists.txt  package.xml
(+23 files in other folders)
